--- a/package.json
+++ b/package.json
@@ -11,5 +11,20 @@
     "npm": "^6.14.4",
     "request": "^2.88.2",
     "slack": "^11.0.2"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ."
+  },
+  "repository": {
+      "type": "git",
+      "url": "git+ssh://git@github.com/5n4wasa6/slack-bot.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+      "url": "https://github.com/5n4wasa6/slack-bot/issues"
   }
 }
